Fix height and width bugs on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,11 @@
 .border-absent { border-color: #3a3a3c; }
 .border-tile { border-color: #3a3a3c; }
 
+.w-board { width: 350px; }
+.max-w-game { max-width: 500px; }
+
 .h-58px { height: 58px; }
+.h-50px { height: 50px; }
+.h-game { height: calc(100vh - 50px); }
+.h-board { height: 420px; }
+.h-keyboard { height: 200px; }
